--- a/maquetacion/src/app/app.component.html
+++ b/maquetacion/src/app/app.component.html
@@ -1,471 +1,5 @@
 
-<div class="container-elevations">
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z1">ERP-mat-elevation-z1</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z2">ERP-mat-elevation-z2</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z3">ERP-mat-elevation-z3</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z4">ERP-mat-elevation-z4</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z5">ERP-mat-elevation-z5</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z6">ERP-mat-elevation-z6</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z7">ERP-mat-elevation-z7</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z8">ERP-mat-elevation-z8</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z9">ERP-mat-elevation-z9</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z10">ERP-mat-elevation-z10</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z11">ERP-mat-elevation-z11</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z12">ERP-mat-elevation-z12</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z13">ERP-mat-elevation-z13</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z14">ERP-mat-elevation-z14</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z15">ERP-mat-elevation-z15</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z16">ERP-mat-elevation-z16</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z17">ERP-mat-elevation-z17</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z18">ERP-mat-elevation-z18</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z19">ERP-mat-elevation-z19</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z20">ERP-mat-elevation-z20</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z21">ERP-mat-elevation-z21</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z22">ERP-mat-elevation-z22</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z23">ERP-mat-elevation-z23</div>
-  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z24">ERP-mat-elevation-z24</div>
-</div>
 
+<router-outlet></router-outlet>
 
-<div class="mat-elevation-z2 t-f-s"  style="display: flex; align-items: flex-start; justify-content: center; gap: 6px; margin: 3rem auto; padding: 1rem; width: 31%; flex-wrap: wrap;">
-
-  <button disabled  size="large" mat-fab color="primary">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-  <button disabled size="large" mat-fab color="accent">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-  
-  <button disabled size="large" mat-fab color="warn">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-  
-  <button disabled size="large" mat-fab color="success">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-  
-  <button disabled size="large" mat-fab color="info">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-  
-  <button disabled size="large" mat-fab color="warning">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-
-
-  <button disabled  mat-fab color="primary">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-  <button disabled  mat-fab color="accent">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-  
-  <button disabled  mat-fab color="warn">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-  
-  <button disabled  mat-fab color="success">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-  
-  <button disabled  mat-fab color="info">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-  
-  <button disabled  mat-fab color="warning">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-
-
-  <button mat-fab disabled size="small" color="primary">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-  <button disabled size="small" mat-fab color="accent">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-  
-  <button disabled size="small" mat-fab color="warn">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-  
-  <button disabled size="small" mat-fab color="success">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-  
-  <button disabled size="small" mat-fab color="info">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-  
-  <button disabled size="small" mat-fab color="warning">
-    <mat-icon>bookmark</mat-icon>
-  </button>
-
-</div>
-
-<div class="mat-elevation-z2 t-f-s"  style="display: flex; align-items: flex-start; justify-content: center; gap: 6px; margin: 3rem auto; padding: 1rem; width: 55%; flex-wrap: wrap;">
-  
-
-  <mat-button-toggle-group disabled size="small">
-    <mat-button-toggle value="left" aria-label="Text align left">
-      <mat-icon>format_align_left</mat-icon>
-    </mat-button-toggle>
-    <mat-button-toggle value="center" aria-label="Text align center">
-      <mat-icon>format_align_center</mat-icon>
-    </mat-button-toggle>
-    <mat-button-toggle value="right" aria-label="Text align right">
-      <mat-icon>format_align_right</mat-icon>
-    </mat-button-toggle>
-    <mat-button-toggle value="justify" disabled aria-label="Text align justify">
-      <mat-icon>format_align_justify</mat-icon>
-    </mat-button-toggle>
-  </mat-button-toggle-group>
-
-  <mat-button-toggle-group disabled >
-    <mat-button-toggle value="left" aria-label="Text align left">
-      <mat-icon>format_align_left</mat-icon>
-    </mat-button-toggle>
-    <mat-button-toggle value="center" aria-label="Text align center">
-      <mat-icon>format_align_center</mat-icon>
-    </mat-button-toggle>
-    <mat-button-toggle value="right" aria-label="Text align right">
-      <mat-icon>format_align_right</mat-icon>
-    </mat-button-toggle>
-    <mat-button-toggle value="justify" disabled aria-label="Text align justify">
-      <mat-icon>format_align_justify</mat-icon>
-    </mat-button-toggle>
-  </mat-button-toggle-group>
-
-  <mat-button-toggle-group disabled size="large">
-    <mat-button-toggle value="left" aria-label="Text align left">
-      <mat-icon>format_align_left</mat-icon>
-    </mat-button-toggle>
-    <mat-button-toggle value="center" aria-label="Text align center">
-      <mat-icon>format_align_center</mat-icon>
-    </mat-button-toggle>
-    <mat-button-toggle value="right" aria-label="Text align right">
-      <mat-icon>format_align_right</mat-icon>
-    </mat-button-toggle>
-    <mat-button-toggle value="justify" disabled aria-label="Text align justify">
-      <mat-icon>format_align_justify</mat-icon>
-    </mat-button-toggle>
-  </mat-button-toggle-group>
-  
-</div>
-
-<div class="mat-elevation-z2 t-f-s"  style="display: flex; align-items: flex-start; justify-content: center; gap: 6px; margin: 3rem auto; padding: 1rem; width: 34%; flex-wrap: wrap;">
-
-      <button disabled  mat-button size="small" color="primary">
-      <mat-icon>add</mat-icon>
-      <span>small</span>
-    </button>
-    <button disabled mat-raised-button size="small" color="primary">
-      <mat-icon>add</mat-icon>
-      <span>small</span>
-    </button>
-    <button disabled mat-flat-button size="small" color="primary">
-      <mat-icon>add</mat-icon>
-      <span>small</span>
-    </button>
-    <button disabled mat-stroked-button size="small" color="primary">
-      <mat-icon>add</mat-icon>
-      <span>small</span>
-    </button>
-
-    <button disabled mat-button  color="primary">
-      <mat-icon>add</mat-icon>
-      <span>medium</span>
-    </button>
-    <button disabled mat-raised-button  color="primary">
-      <mat-icon>add</mat-icon>
-      <span>medium</span>
-    </button>
-    <button disabled mat-flat-button  color="primary">
-      <mat-icon>add</mat-icon>
-      <span>medium</span>
-    </button>
-    <button disabled mat-stroked-button  color="primary">
-      <mat-icon>add</mat-icon>
-      <span>medium</span>
-    </button>
-
-
-    <button disabled mat-button size="large" color="primary">
-      <mat-icon>add</mat-icon>
-      <span>large</span>
-    </button>
-    <button disabled mat-raised-button size="large" color="primary">
-      <mat-icon>add</mat-icon>
-      <span>large</span>
-    </button>
-    <button disabled mat-flat-button size="large" color="primary">
-      <mat-icon>add</mat-icon>
-      <span>large</span>
-    </button>
-    <button disabled mat-stroked-button size="large" color="primary">
-      <mat-icon>add</mat-icon>
-      <span>large</span>
-    </button>
-
-
-</div>
-
-<div class="mat-elevation-z2 t-f-s"  style="display: flex; align-items: flex-start; justify-content: center; gap: 6px; margin: 3rem auto; padding: 1rem; width: 45%; flex-wrap: wrap;">
-  
-  <mat-chip disabled >
-    <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
-    Dog two
-  </mat-chip>
-
-  <mat-chip-row disabled>
-      icon
-      <button matChipRemove >
-        <mat-icon>cancel</mat-icon>
-      </button>
-  </mat-chip-row>
-
-  <mat-chip-option color="primary" selected disabled>Accent fish</mat-chip-option>
-  <mat-chip-option color="accent" selected disabled>Accent fish</mat-chip-option>
-  <mat-chip-option color="warn" selected disabled>Accent fish</mat-chip-option>
-
-
-
-</div>
-
-<div class="mat-elevation-z2 t-f-s"  style="display: flex; align-items: flex-start; justify-content: center; gap: 6px; margin: 3rem auto; padding: 1rem; width: 65%; flex-wrap: wrap;">
-  <mat-list disabled>
-    <div mat-subheader>Folders</div>
-    <mat-list-item *ngFor="let folder of folders">
-      <mat-icon matListItemIcon>folder</mat-icon>
-      <div matListItemTitle>{{folder.name}}</div>
-      <div matListItemLine>{{folder.updated | date}}</div>
-    </mat-list-item>
-    <mat-divider></mat-divider>
-    <div mat-subheader>Notes</div>
-    <mat-list-item *ngFor="let note of notes">
-      <mat-icon matListItemIcon>note</mat-icon>
-      <div matListItemTitle>{{note.name}}</div>
-      <div matListItemLine>{{note.updated | date}}</div>
-    </mat-list-item>
-  </mat-list>
-</div>
-
-<div class="mat-elevation-z2 t-f-s"  style="display: flex; align-items: flex-start; justify-content: center; gap: 6px; margin: 3rem auto; padding: 1rem; width: 65%; flex-wrap: wrap;">
-
-  <mat-list>
-    <mat-list-item>Item 1</mat-list-item>
-    <mat-divider></mat-divider>
-    <mat-list-item>Item 2</mat-list-item>
-    <mat-divider></mat-divider>
-    <mat-list-item>Item 3</mat-list-item>
-  </mat-list>
-</div>
-
-<div class="d-flex a-center s-evenly column p-base full-view medium">
-  <!-- MAT RADIO GROUP -->
-  <div class="d-flex clomun a-center">
-    <mat-radio-group>
-      <mat-radio-button></mat-radio-button>
-      <mat-radio-button></mat-radio-button>
-    </mat-radio-group>
-  </div>
-  <!-- ------BUTTON -->
-  <div class="d-flex clomun a-center">
-    <h4>Buttons</h4>
-  </div>
-  <div class="d-flex a-center s-evenley">
-    <button mat-raised-button color="primary">Small</button>
-    <button mat-raised-button color="primary">
-      Small<mat-icon>add</mat-icon>
-    </button>
-  </div>
-  <!--  PROGRES SPINNER -->
-  <div class="d-flex a-center s-evenly column">
-    <h4>Spinner</h4>
-    <mat-spinner></mat-spinner>
-  </div>
-  <!-- LISTAS -->
-  <div class="d-flex a-center column">
-    <h4>Listas</h4>
-    <mat-list role="list">
-      <mat-list-item role="listitem">Item 1</mat-list-item>
-      <mat-list-item role="listitem">Item 2</mat-list-item>
-      <mat-list-item role="listitem">Item 3</mat-list-item>
-    </mat-list>
-  </div>
-
-  <div class="d-flex a-center s-evenly column">
-    <h4>Iconos</h4>
-    <mat-icon>add</mat-icon>
-    <mat-icon>menu</mat-icon>
-  </div>
-
-  <!-- LISTAS CON ICONOS -->
-  <div class="d-flex a-center j-center">
-    <mat-list role="list" size="small" ap>
-      <mat-list-item role="listitem">
-        <p>Hello world</p>
-        <button mat-icon-button matListItemMeta>
-          <mat-icon>note</mat-icon>
-        </button>
-      </mat-list-item>
-      <mat-list-item role="listitem">
-        <p>Hello world</p>
-        <button mat-icon-button matListItemMeta>
-          <mat-icon matListItemIcon>note</mat-icon>
-        </button>
-      </mat-list-item>
-      <mat-list-item role="listitem">
-        <p>Hello world</p>
-        <button mat-icon-button matListItemMeta>
-          <mat-icon matListItemIcon>note</mat-icon>
-        </button>
-      </mat-list-item>
-    </mat-list>
-  </div>
-
-  <!-- BUTTON GROUP -->
-  <div class="d-flex a-center j-center column">
-    <h4>Button group</h4>
-    <div>
-      <mat-button-toggle-group>
-        <mat-button-toggle value="bold">Bold</mat-button-toggle>
-        <mat-button-toggle value="italic">Italic</mat-button-toggle>
-        <mat-button-toggle value="underline">Underline</mat-button-toggle>
-      </mat-button-toggle-group>
-    </div>
-  </div>
-  <!-- EXPANSION PANEL -->
-  <div class="d-flex a-center j-center m-base column">
-    <h4>Expansion panel</h4>
-    <br />
-    <div>
-      <mat-accordion>
-        <mat-expansion-panel hideToggle>
-          <mat-expansion-panel-header>
-            <mat-panel-title> This is the expansion title </mat-panel-title>
-            <mat-panel-description>
-              This is a summary of the content
-            </mat-panel-description>
-          </mat-expansion-panel-header>
-          <p>This is the primary content of the panel.</p>
-        </mat-expansion-panel>
-        <mat-expansion-panel
-          (opened)="panelOpenState = true"
-          (closed)="panelOpenState = false"
-        >
-          <mat-expansion-panel-header>
-            <mat-panel-title> Self aware panel </mat-panel-title>
-            <mat-panel-description>
-              Currently I am {{ panelOpenState ? "open" : "closed" }}
-            </mat-panel-description>
-          </mat-expansion-panel-header>
-          <p>I'm visible because I am open</p>
-        </mat-expansion-panel>
-      </mat-accordion>
-    </div>
-  </div>
-
-  <!-- ICON BUTTON -->
-  <div class="d-flex a-center s-evenly m-base column">
-    <h4>Icon buttons</h4>
-    <button mat-icon-button color="primary" size="small">
-      <mat-icon>add</mat-icon>
-    </button>
-    <button mat-icon-button color="accent">
-      <mat-icon>add</mat-icon>
-    </button>
-    <button mat-icon-button color="warn">
-      <mat-icon>add</mat-icon>
-    </button>
-  </div>
-
-  <!-- TABS -->
-  <div class="d-flex a-center s-evenly m-base column">
-    <h4>Tabs</h4>
-    <mat-tab-group>
-      <mat-tab label="First"> Content 1 </mat-tab>
-      <mat-tab label="Second"> Content 2 </mat-tab>
-      <mat-tab label="Third"> Content 3 </mat-tab>
-    </mat-tab-group>
-  </div>
-
-  <!-- SLIDER -->
-  <div class="min-width d-flex a-center s-evenly m-base column">
-    <mat-slider size="medium">
-      <input matSliderThumb />
-    </mat-slider>
-  </div>
-
-  <!-- FAB BUTTON -->
-  <div class="d-flex j-center a-center column">
-    <div class="d-flex">
-      <h4>Fab button</h4>
-      <button
-        mat-fab
-        color="primary"
-        aria-label="Example icon button with a delete icon"
-      >
-        <mat-icon>delete</mat-icon>
-      </button>
-      <p>Mini fab</p>
-      <button
-        mat-mini-fab
-        color="primary"
-        aria-label="Example icon button with a menu icon"
-      >
-        <mat-icon>menu</mat-icon>
-      </button>
-      <p>Extended fab</p>
-      <button mat-fab extended disabled>
-        <mat-icon>favorite</mat-icon>
-        Disabled
-      </button>
-    </div>
-  </div>
-
-  <!-- CHECKBOX -->
-  <div class="d-flex a-center column">
-    <h4>Checkbox</h4>
-    <mat-checkbox></mat-checkbox>
-    <mat-checkbox></mat-checkbox>
-  </div>
-
-  <!-- Data table -->
-  <div class="d-flex column">
-    <h4>Table</h4>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-      <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-
-      <!-- Position Column -->
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef>No.</th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
-      </ng-container>
-
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-      </ng-container>
-
-      <!-- Weight Column -->
-      <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef>Weight</th>
-        <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
-      </ng-container>
-
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef>Symbol</th>
-        <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-  </div>
-</div>
-
-<!-- <app-shadows-components-list></app-shadows-components-list> -->
 
