--- a/maquetacion/src/theme/_theme.scss
+++ b/maquetacion/src/theme/_theme.scss
@@ -1,10 +1,12 @@
 @use "sass:map";
-@use "@material/textfield" with($minimum-height-for-filled-label:32px, $minimum-height:32px);
+@use "@material/textfield"
+  with($minimum-height-for-filled-label: 32px, $minimum-height: 32px);
 @use "@angular/material" as mat;
 @use "./mixins.scss" as variants;
 @import "./typography";
 @import "./colors";
 @import "./sizes";
+@import "./ortientacion.scss";
 
 @include mat.core();
 
