--- a/maquetacion/src/app/modules/proyectos-venta/components/card-container-proyecto/mat-card.component.html
+++ b/maquetacion/src/app/modules/proyectos-venta/components/card-container-proyecto/mat-card.component.html
@@ -1,9 +1,9 @@
 
 
 
-<mat-card routerLink="/plano-general">
+<mat-card (click)="test('/proyectos_venta/plano-general')">
     <mat-card-header class="p-3 ">
-        <h6 class="color-text-primary">Porto allegre 88Av calle 58</h6>
+        <h6 class="color-text-primary ellipsis">Porto allegre 88 Av Calle 58 Funza de Bogotá</h6>
     </mat-card-header>
     <mat-card-content class="pt-6 pl-4 pb-2 pr-4">
         <div class="px-3 d-flex justify-content-center">
