--- a/maquetacion/src/app/modules/proyectos-venta/components/card-data-proyecto/card-data-proyecto.component.html
+++ b/maquetacion/src/app/modules/proyectos-venta/components/card-data-proyecto/card-data-proyecto.component.html
@@ -1,8 +1,8 @@
 <mat-card >
-    <mat-card-header class="p-3 row align-items-center">
-        <div class="row align-items-center">
-            <h6 class="color-text-primary">Chicala E1 - Apartamento tipo...</h6>
-            <button mat-icon-button color="primary" >
+    <mat-card-header class="p-3 row align-items-center ">
+        <div class="row align-items-center ">
+            <span class="mat-subtitle-1 color-text-primary ellipsis col-8">Chicala E1 - Apartamento tipo B - Área 45 mts2.</span>
+            <button mat-icon-button color="primary"  (click)="openDialog()"  >
                 <mat-icon class="mat-icon-outlined">map</mat-icon>
             </button>
         </div>
