--- a/maquetacion/src/app/modules/proyectos-venta/components/card-data-proyecto/card-data-proyecto.component.scss
+++ b/maquetacion/src/app/modules/proyectos-venta/components/card-data-proyecto/card-data-proyecto.component.scss
@@ -5,13 +5,13 @@
 .cantidad{
     border-radius: 8px;
     &-disponibles{
-        background-color: #CEF09D;
+        background-color: #C3E58F;
     }
     &-vendidas{
-        background-color: #f09d9d;
+        background-color: #FFA1A1;
     }
     &-reservadas{
-        background-color: #9dd3f0;
+        background-color: #C0E2EE;
 
     }
 }
