--- a/maquetacion/src/app/modules/proyectos-venta/components/modal-planos/modal-planos.component.html
+++ b/maquetacion/src/app/modules/proyectos-venta/components/modal-planos/modal-planos.component.html
@@ -1,1 +1,13 @@
-<p>modal-planos works!</p>
+<mat-dialog-content class="row align-items-center justify-content-center gap-2 ">
+  <button mat-icon-button  color="primary">
+    <mat-icon>chevron_left</mat-icon>
+  </button>
+    <img src="../assets/planos.jpg" width="600px" height="380px" alt="planos">
+    <button mat-icon-button color="primary" >
+      <mat-icon>chevron_right</mat-icon>
+    </button>
+</mat-dialog-content>
+
+<mat-dialog-actions align="end">
+  <button mat-flat-button color="primary" mat-dialog-close>Cerrar</button>
+</mat-dialog-actions>
