--- a/maquetacion/src/app/modules/proyectos-venta/pages/proyectos/proyectos.component.html
+++ b/maquetacion/src/app/modules/proyectos-venta/pages/proyectos/proyectos.component.html
@@ -1,5 +1,5 @@
-<header-page>
-  <div class="d-flex gap-2 align-items-start">
+<header-page namePage="Proyectos en venta">
+  <div class="d-flex gap-2 align-items-start ">
     <mat-form-field  appearance="outline" >
       <mat-label>Buscar</mat-label>
       <input matInput placeholder="Placeholder">
@@ -8,8 +8,7 @@
 
     <mat-form-field appearance="outline" >
       <mat-label>Proyectos por vendedor</mat-label>
-      <mat-select  >
-    
+      <mat-select >
           <mat-option >
             prueba
           </mat-option>
@@ -18,7 +17,7 @@
 
   </div>
 </header-page>
-<div class="p-3 d-flex gap-2 justify-content-center ">
+<div class="p-3 d-flex gap-2 justify-content-center mt-17">
     <card-container-proyecto></card-container-proyecto>
     <card-container-proyecto></card-container-proyecto>
     <card-container-proyecto></card-container-proyecto>
