--- a/maquetacion/src/app/components/header-page/header-page.component.html
+++ b/maquetacion/src/app/components/header-page/header-page.component.html
@@ -1,14 +1,20 @@
-<mat-card class="mat-elevation-z1 pt-3 pr-5 pb-2 pl-5 ">
+<mat-card class="mat-elevation-z1 pt-3 pr-5 pb-2 pl-5 col-12 ">
     <div class="d-flex align-items-center justify-content-between ">
-        <div class="d-flex column">
-            <button mat-button color="primary">
+        <div class="d-flex column align-items-start">
+            <button (click)="routes('route')"mat-button color="primary" >
                 <mat-icon>chevron_left</mat-icon>
                 volver
             </button>
-            <h6 class="color-text-primary">Proyectos en venta</h6>
+            
+            <h6 class="color-text-primary">
+                {{namePage}}
+                <ng-content select="[subtitle]"></ng-content>
+            </h6>
         </div>
 
         <ng-content #name></ng-content>
+
         
     </div>    
 </mat-card>
+
