--- a/maquetacion/src/app/modules/proyectos-venta/pages/seleccion-inmuebles/seleccion-inmuebles.component.html
+++ b/maquetacion/src/app/modules/proyectos-venta/pages/seleccion-inmuebles/seleccion-inmuebles.component.html
@@ -3,18 +3,127 @@
 </header-page>
 
     
-<mat-tab-group class="fixed mt-18 col-12" size="medium" orientation="vertical" animationDuration="0s" color="primary">
-    <mat-tab label="Apartamento tipo 1 46,86 m2 Área...">a</mat-tab>
-    <mat-tab label="Apartamento tipo 1 46,86 m2 Área...">b</mat-tab>
-    <mat-tab label="Apartamento tipo 1 46,86 m2 Área...">c</mat-tab>
-    
-    <mat-tab label="Apartamento tipo 1 46,86 m2 Área...">d</mat-tab>
-    <mat-tab label="Apartamento tipo 1 46,86 m2 Área...">f</mat-tab>
-    <mat-tab label="Apartamento tipo 1 46,86 m2 Área...">g</mat-tab>
-    
-    <mat-tab label="Apartamento tipo 1 46,86 m2 Área...">h</mat-tab>
-    <mat-tab label="Apartamento tipo 1 46,86 m2 Área...">i</mat-tab>
-    
+<mat-tab-group class="fixed mt-18 col-12"  orientation="vertical" animationDuration="0s" disablePagination="true" color="primary">
+    <mat-tab label="Apartamento tipo 1 46,86 m2 Área...">
+        <mat-card class="fixed col-12 mat-elevation-z1">
+            <mat-card-content class="p-4 ">
+                <div class="row align-items-center gap-1">
+                    <div class="col-12 row justify-content-between align-items-center gap-1">
+                        <div class="column justify-content-center align-items-flex-start gap-1">
+                            <span class="mat subtitle-2 color-text-primary">Chicala E1 - Apartamento tipo único 52mts - Área privada</span>
+                            <span class="mat-subtitle-2 color-primary">Caracteristicas</span>
+                            <span class="mat-body-2 color-text-secondary">Área construida 45,42 m2 aprox Área Privada 39.80 aprox</span>
+                        </div>
+                        <img src="../assets/planos.jpg" width="101px" height="90px" alt="planos">
+                    </div>
 
-  </mat-tab-group>
+                </div>
+            </mat-card-content>
+        </mat-card>
+
+        <mat-card class="bg-transparent col-12 shadow-none">
+            <mat-card-content class="row py-4 pl-4 justify-content-end align-items-start gap-1 shadow-none">
+                <mat-checkbox value="Disponibles" class="example-margin" color="primary" checked>Disponibles</mat-checkbox>
+                <mat-checkbox value="Vendidos" class="example-margin" color="primary" checked>Vendidos</mat-checkbox>
+                <mat-checkbox value="Reservados" class="example-margin" color="primary" checked>Reservados</mat-checkbox>
+            </mat-card-content>
+        </mat-card>
+
+        <div class="column align-items-start gap-2">
+            <div class="col-12 row align-items-start gap-2">
+                <mat-card class="mat-elevation-z1 ">
+                    <mat-card-content class="gap-1 p-4 column align-items-center">
+                        <h6 class="color-text-primary">piso 1</h6>
+                        <mat-chip>APT 203 - TORRE 1 1000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 2000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 3000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 4000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 5000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 6000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 7000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 8000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 9000,000,000 </mat-chip> 
+                    </mat-card-content>
+                </mat-card>
+                <mat-card class="mat-elevation-z1 ">
+                    <mat-card-content class="gap-1 p-4 column align-items-center">
+                        <h6 class="color-text-primary">piso 2</h6>
+                        <mat-chip>APT 203 - TORRE 1 1000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 2000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 3000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 4000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 5000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 6000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 7000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 8000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 9000,000,000 </mat-chip> 
+                    </mat-card-content>
+                </mat-card>
+                <mat-card class="mat-elevation-z1 ">
+                    <mat-card-content class="gap-1 p-4 column align-items-center">
+                        <h6 class="color-text-primary">piso 3</h6>
+                        <mat-chip>APT 203 - TORRE 1 1000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 2000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 3000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 4000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 5000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 6000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 7000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 8000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 9000,000,000 </mat-chip> 
+                    </mat-card-content>
+                </mat-card>
+                <mat-card class="mat-elevation-z1 ">
+                    <mat-card-content class="gap-1 p-4 column align-items-center">
+                        <h6 class="color-text-primary">piso 4</h6>
+                        <mat-chip>APT 203 - TORRE 1 1000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 2000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 3000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 4000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 5000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 6000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 7000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 8000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 9000,000,000 </mat-chip> 
+                    </mat-card-content>
+                </mat-card>
+                <mat-card class="mat-elevation-z1 ">
+                    <mat-card-content class="gap-1 p-4 column align-items-center">
+                        <h6 class="color-text-primary">piso 5</h6>
+                        <mat-chip>APT 203 - TORRE 1 1000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 2000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 3000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 4000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 5000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 6000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 7000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 8000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 9000,000,000 </mat-chip> 
+                    </mat-card-content>
+                </mat-card>
+                <mat-card class="mat-elevation-z1 ">
+                    <mat-card-content class="gap-1 p-4 column align-items-center">
+                        <h6 class="color-text-primary">piso 6</h6>
+                        <mat-chip >APT 203 - TORRE 1 1000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 2000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 3000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 4000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 5000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 6000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 7000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 8000,000,000 </mat-chip>
+                        <mat-chip>APT 203 - TORRE 1 9000,000,000 </mat-chip> 
+                    </mat-card-content>
+                </mat-card>
+              
+            </div>
+        </div>
+        
+    </mat-tab>
+</mat-tab-group>
+
+
+
   
+
+
